@@ -1,3 +1,9 @@
+发布时间：2018/08/23 17:25
+修改记录：
+	一、lib脚本修改
+	lib脚本版本号：2.1.0
+	(1)【增加功能】 Pins.setup(pin,val,pull)接口新增pull参数，表示设置输入和中断模式的时候可以选择IO口状态:pio.PULLUP：上拉模式 。pio.PULLDOWN：下拉模式。pio.NOPULL：高阻态,默认上拉。
+
 发布时间：2018/08/19 22:55
 修改记录：
 	一、lib脚本修改
